--- a/_config/shopify.yml
+++ b/_config/shopify.yml
@@ -1,13 +1,13 @@
 ---
 Name: shopify
 ---
-#XD\Shopify\Client:
+#ShopifyClient:
 #  api_key: ''
 #  api_password: ''
 #  storefront_access_token: ''
 #  shopify_domain: ''
 #  shared_secret: ''
 
-PageController:
+Page_Controller:
   extensions:
-    - XD\Shopify\Extension\ShopifyExtension
+    - ShopifyExtension
